--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@mui/material": "^5.10.3",
     "@mui/styled-engine-sc": "^5.10.3",
     "@mui/x-data-grid": "^5.16.0",
+    "@mui/x-date-pickers": "^5.0.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
@@ -16,6 +17,7 @@
     "@types/node": "^16.11.56",
     "@types/react": "^18.0.18",
     "@types/react-dom": "^18.0.6",
+    "dayjs": "^1.11.5",
     "formik": "^2.2.9",
     "i18next": "^21.9.1",
     "react": "^18.2.0",
@@ -23,6 +25,7 @@
     "react-phone-number-input": "^3.2.11",
     "react-router-dom": "^6.4.0-pre.2",
     "react-scripts": "5.0.1",
+    "react-uuid": "^1.0.3",
     "styled-components": "^5.3.5",
     "typescript": "^4.8.2",
     "web-vitals": "^2.1.4",
