--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/node": "^16.11.56",
     "@types/react": "^18.0.18",
     "@types/react-dom": "^18.0.6",
+    "axios": "^1.0.0",
     "dayjs": "^1.11.5",
     "formik": "^2.2.9",
     "i18next": "^21.9.1",
@@ -33,7 +34,8 @@
     "styled-components": "^5.3.5",
     "typescript": "^4.8.2",
     "web-vitals": "^2.1.4",
-    "yub": "^0.11.1"
+    "yub": "^0.11.1",
+    "yup": "^0.32.11"
   },
   "scripts": {
     "start": "react-scripts start",
