--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-scripts": "5.0.1",
     "react-uuid": "^1.0.3",
     "recharts": "^2.1.14",
+    "socket.io-client": "^4.5.4",
     "styled-components": "^5.3.5",
     "typescript": "^4.8.2",
     "web-vitals": "^2.1.4",
