--- a/package.json
+++ b/package.json
@@ -22,9 +22,11 @@
     "axios": "^1.0.0",
     "dayjs": "^1.11.5",
     "formik": "^2.2.9",
+    "history": "^5.3.0",
     "i18next": "^21.9.1",
     "react": "^18.2.0",
     "react-beautiful-dnd": "^13.1.1",
+    "react-beforeunload": "^2.5.3",
     "react-dom": "^18.2.0",
     "react-phone-number-input": "^3.2.11",
     "react-router-dom": "^6.4.0-pre.2",
@@ -63,6 +65,7 @@
     ]
   },
   "devDependencies": {
-    "@types/react-beautiful-dnd": "^13.1.2"
+    "@types/react-beautiful-dnd": "^13.1.2",
+    "@types/react-beforeunload": "^2.1.1"
   }
 }
