--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 # Made by Poukam Pierre
-REACT_APP_URL_REMOTE_LINK= http://localhost:3000/api
-REACT_APP_URL_SOCKET_LINK= http://localhost:3000
+REACT_APP_URL_REMOTE_LINK= http://192.168.8.100:3000/api
+REACT_APP_URL_SOCKET_LINK= http://192.168.8.100:3002
