--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-scripts": "5.0.1",
     "react-uuid": "^1.0.3",
     "recharts": "^2.1.14",
+    "serve": "^14.2.0",
     "socket.io-client": "^4.5.4",
     "styled-components": "^5.3.5",
     "typescript": "^4.8.2",
@@ -65,7 +66,7 @@
     ]
   },
   "devDependencies": {
-    "@types/react-beautiful-dnd": "^13.1.2",
+    "@types/react-beautiful-dnd": "^13.1.4",
     "@types/react-beforeunload": "^2.1.1"
   }
 }
