--- a/package.json
+++ b/package.json
@@ -20,15 +20,19 @@
     "@types/react": "^18.0.18",
     "@types/react-dom": "^18.0.6",
     "axios": "^1.0.0",
+    "better-commits": "^1.15.6",
     "dayjs": "^1.11.5",
     "formik": "^2.2.9",
     "history": "^5.3.0",
     "i18next": "^21.9.1",
+    "i18next-browser-languagedetector": "^8.0.0",
+    "i18next-http-backend": "^2.5.1",
     "react": "^18.2.0",
     "react-beautiful-dnd": "^13.1.1",
     "react-beforeunload": "^2.5.3",
     "react-custom-scrollbars": "^4.2.1",
     "react-dom": "^18.2.0",
+    "react-i18next": "^14.1.1",
     "react-phone-number-input": "^3.2.11",
     "react-router-dom": "^6.4.0-pre.2",
     "react-scripts": "5.0.1",
